--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Oswald:wght@200..700&display=swap');
+
+:root{
+    --font1:  Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Oswald", Verdana, Geneva, tahoma, sans-serif;
+    --font3: "Caveat", cursive, 'Times New Roman', times, serif;
+}
 
 *{
     margin: 0px;
@@ -8,17 +15,20 @@
 html, body{
     min-height: 98vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--font2);
 }
 
 header > h1{
     padding-top: 20px;
     font-variant: small-caps;
+    font-size: 4vw;
 }
 
 header > p{
@@ -41,6 +51,12 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-size: 1.5em;
+    font-family: var(--font3);
+}
+
+section p{
+    padding: 2em;
 }
 
 section.normal{
@@ -51,12 +67,28 @@ section.normal{
 section.imagen{
     background-color: rgb(42, 42, 42);
     color: white;
+    box-shadow: inset 9px 9px 13px 0px rgba(0, 0, 0, 0.39);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagen > p{
-    width: 400px;
-    background-color: black;
+    display: inline-block;
+    margin-left: 40px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.29);
     border-radius: 6px;
+    text-shadow: 1px 2px 1px black;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer{
